generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  MEMBER
  MANAGER
  ADMIN
}

enum ReportStatus {
  DRAFT
  SUBMITTED
  NEEDS_CORRECTION
  APPROVED
}

enum Priority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

enum TaskStatus {
  NOT_STARTED
  IN_PROGRESS
  COMPLETED
  BLOCKED
}

enum WorkType {
  DEVELOPMENT
  TESTING
  MEETING
  RESEARCH
  DOCUMENTATION
  OTHER
}

model User {
  id           String         @id @default(uuid())
  name         String
  email        String         @unique
  passwordHash String
  role         UserRole       @default(MEMBER)
  createdAt    DateTime       @default(now())
  updatedAt    DateTime       @updatedAt

  reports      Report[]
  reviews      Review[]
}

model Project {
  id          String   @id @default(uuid())
  name        String   @unique
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  reports     Report[]
}

model Report {
  id              String       @id @default(uuid())
  weekStart       DateTime
  weekEnd         DateTime
  status          ReportStatus @default(DRAFT)

  nextWeekPlans   String?
  notes           String?

  userId          String
  projectId       String

  createdAt       DateTime     @default(now())
  updatedAt       DateTime     @updatedAt

  user            User         @relation(fields: [userId], references: [id])
  project         Project      @relation(fields: [projectId], references: [id])

  tasks           ReportTask[]
  blockers        Blocker[]
  achievements    Achievement[]
  workHours       WorkHour[]
  versions        ReportVersion[]
  reviews         Review[]

  @@unique([userId, weekStart, projectId])
}

model ReportTask {
  id          String     @id @default(uuid())
  taskName    String
  priority    Priority   @default(MEDIUM)
  status      TaskStatus @default(NOT_STARTED)

  plannedPercent Int      @default(0)
  actualPercent  Int      @default(0)

  plannedHours Float?
  actualHours  Float?
  output       String?

  reportId    String
  report      Report     @relation(fields: [reportId], references: [id], onDelete: Cascade)

  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt
}

model Blocker {
  id          String   @id @default(uuid())
  description String

  reportId    String
  report      Report   @relation(fields: [reportId], references: [id], onDelete: Cascade)

  createdAt   DateTime @default(now())
}

model Achievement {
  id          String   @id @default(uuid())
  description String

  reportId    String
  report      Report   @relation(fields: [reportId], references: [id], onDelete: Cascade)

  createdAt   DateTime @default(now())
}

model WorkHour {
  id          String   @id @default(uuid())
  workType    WorkType
  hours       Float
  notes       String?

  reportId    String
  report      Report   @relation(fields: [reportId], references: [id], onDelete: Cascade)

  createdAt   DateTime @default(now())
}

model ReportVersion {
  id          String   @id @default(uuid())
  versionNo   Int
  snapshot    Json

  reportId    String
  report      Report   @relation(fields: [reportId], references: [id], onDelete: Cascade)

  createdAt   DateTime @default(now())

  reviews Review[]

  @@unique([reportId, versionNo])
}

model Review {
  id          String   @id @default(uuid())
  comment     String
  action      ReportStatus

  reportId    String
  reviewerId  String
  reportVersionId String?
  reportVersion ReportVersion? @relation(fields: [reportVersionId], references: [id], onDelete: SetNull)

  report      Report   @relation(fields: [reportId], references: [id], onDelete: Cascade)
  reviewer    User     @relation(fields: [reviewerId], references: [id])

  createdAt   DateTime @default(now())
}
